# corrotinas

./: README.md  exemplo_00.py  exemplo_01.py  exemplo_02.py  exemplo_03.py  exemplo_04.py  exemplo_05.py  exemplo_06.py  exemplo_07.py  pyproject.toml
